export const snapshot = {};

snapshot[`sqlr main 1`] = `
{
  code: 0,
  output: "
Usage:   sqlr  
Version: *

Description:

  Command line for interacting with SQL databases. Use '--help' for each command to list it's parameters

Options:

  -h, --help     - Show this help.                                                 
  -V, --version  - Show the version number for this program.                       
  --debug        - Enable debug logs                                               
  -g, --global   - Use global scope for connections (ignore git repository scope)  

Commands:

  add                       - Add new connection. Run without parameters to use wizard.                     
  rm          [connection]  - Remove selected connection                                                    
  get         [connection]  - Get details of selected connection                                            
  ls-types                  - Get available connection types to be used with '--type' parameter in 'add'    
                              command                                                                       
  ls                        - List all defined connections                                                  
  clear                     - Remove all connections                                                        
  set         [connection]  - Set default connection for current scope                                      
  set-global  <enabled>     - Toggle global mode (true = ignore git repository scope, false = use repository
                              scope)                                                                        
  describe                  - Describe all tables and columns available in database                         
  query       [queryArg]    - Run query against specified database                                          
  update                    - Update sqlr to the latest version                                             
  help                      - Display detailed help text with usage instructions                            

",
  outputError: "",
  sqlrCommand: "sqlr",
}
`;

snapshot[`sqlr main 2`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n conn-one -t postgresql -s "postgres://u:p@localhost:5432/db1"',
}
`;

snapshot[`sqlr main 3`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n conn-two -t mysql -s "mysql://u:p@localhost:3306/db2"',
}
`;

snapshot[`sqlr main 4`] = `
{
  code: 0,
  output: "  ┌──────────┬────────────┐
  │ Name     │ Type       │
  ├──────────┼────────────┤
  │ conn-one │ postgresql │
  ├──────────┼────────────┤
  │ conn-two │ mysql      │
  └──────────┴────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr ls",
}
`;

snapshot[`sqlr main 5`] = `
{
  code: 0,
  output: "All connections removed
",
  outputError: "",
  sqlrCommand: "sqlr clear",
}
`;

snapshot[`sqlr main 6`] = `
{
  code: 0,
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  outputError: "",
  sqlrCommand: "sqlr ls",
}
`;

snapshot[`sqlr connection string encoding 1`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n enc-mssql -t mssql -s "mssql://sa:World123!%3B@localhost:1433/db?encrypt=true&trustServerCertificate=false"',
}
`;

snapshot[`sqlr connection string encoding 2`] = `
{
  code: 0,
  output: "  ┌───────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
  │ Name      │ Type  │ Connection string                                                                │
  ├───────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ enc-mssql │ mssql │ mssql://sa:World123!;@localhost:1433/db?encrypt=true&trustServerCertificate=fals │
  │           │       │ e                                                                                │
  └───────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get enc-mssql",
}
`;

snapshot[`sqlr connection string encoding 3`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n enc-pg -t postgresql -s "postgres://localhost:5432/db?user=admin&password=p%40ss%3Aw%23rd&application_name=sqlr&sslmode=prefer"',
}
`;

snapshot[`sqlr connection string encoding 4`] = `
{
  code: 0,
  output: "  ┌────────┬────────────┬──────────────────────────────────────────────────────────────────────────────────┐
  │ Name   │ Type       │ Connection string                                                                │
  ├────────┼────────────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ enc-pg │ postgresql │ postgres://localhost:5432/db?user=admin&password=p@ss:w#rd&application_name=sqlr │
  │        │            │ &sslmode=prefer                                                                  │
  └────────┴────────────┴──────────────────────────────────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get enc-pg",
}
`;

snapshot[`sqlr connection string encoding 5`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: \`sqlr add -n enc-mysql -t mysql -s 'mysql://u:p%40ss@localhost:3306/db?ssl={"rejectUnauthorized":false}'\`,
}
`;

snapshot[`sqlr connection string encoding 6`] = `
{
  code: 0,
  output: '  ┌───────────┬───────┬───────────────────────────────────────────────────────────────────┐
  │ Name      │ Type  │ Connection string                                                 │
  ├───────────┼───────┼───────────────────────────────────────────────────────────────────┤
  │ enc-mysql │ mysql │ mysql://u:p@ss@localhost:3306/db?ssl={"rejectUnauthorized":false} │
  └───────────┴───────┴───────────────────────────────────────────────────────────────────┘
',
  outputError: "",
  sqlrCommand: "sqlr get enc-mysql",
}
`;

snapshot[`sqlr connection string encoding 7`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n enc-ch -t clickhouse -s "https://user:p%40ss%3Bword@localhost:8443?database=mydb"',
}
`;

snapshot[`sqlr connection string encoding 8`] = `
{
  code: 0,
  output: "  ┌────────┬────────────┬─────────────────────────────────────────────────────┐
  │ Name   │ Type       │ Connection string                                   │
  ├────────┼────────────┼─────────────────────────────────────────────────────┤
  │ enc-ch │ clickhouse │ https://user:p@ss;word@localhost:8443?database=mydb │
  └────────┴────────────┴─────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get enc-ch",
}
`;

snapshot[`sqlr connection string encoding 9`] = `
{
  code: 0,
  output: "All connections removed
",
  outputError: "",
  sqlrCommand: "sqlr clear",
}
`;

snapshot[`sqlr encrypted connection via env var 1`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n encrypted-pg -t postgresql -s "postgres://u:p@localhost:5432/db1"',
}
`;

snapshot[`sqlr encrypted connection via env var 2`] = `
{
  code: 0,
  output: "  ┌──────────────┬────────────┬───────────────────────────────────┐
  │ Name         │ Type       │ Connection string                 │
  ├──────────────┼────────────┼───────────────────────────────────┤
  │ encrypted-pg │ postgresql │ postgres://u:p@localhost:5432/db1 │
  └──────────────┴────────────┴───────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get encrypted-pg",
}
`;

snapshot[`sqlr encrypted connection via env var 3`] = `
{
  code: 0,
  output: "All connections removed
",
  outputError: "",
  sqlrCommand: "sqlr clear",
}
`;

snapshot[`sqlr scoped connections 1`] = `
{
  output: "  ┌───────────┬────────────┐
  │ Name      │ Type       │
  ├───────────┼────────────┤
  │ repo-conn │ postgresql │
  └───────────┴────────────┘
",
  step: "repo-scoped connection visible",
}
`;

snapshot[`sqlr scoped connections 2`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "repo-scoped connection not visible in other repo",
}
`;

snapshot[`sqlr scoped connections 3`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "repo-scoped connection not visible globally",
}
`;

snapshot[`sqlr scoped connections 4`] = `
{
  output1: "  ┌─────────────┬───────┐
  │ Name        │ Type  │
  ├─────────────┼───────┤
  │ global-conn │ mysql │
  └─────────────┴───────┘
",
  output2: "  ┌─────────────┬───────┐
  │ Name        │ Type  │
  ├─────────────┼───────┤
  │ global-conn │ mysql │
  └─────────────┴───────┘
",
  step: "global connection visible from both repos",
}
`;

snapshot[`sqlr scoped connections 5`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "global connection not visible in repo scope",
}
`;

snapshot[`sqlr scoped connections 6`] = `
{
  globalOutput: "  ┌─────────────┬───────┐
  │ Name        │ Type  │
  ├─────────────┼───────┤
  │ global-conn │ mysql │
  └─────────────┴───────┘
",
  repoOutput: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "clear only affects current scope",
}
`;

snapshot[`sqlr set-global 1`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "before set-global",
}
`;

snapshot[`sqlr set-global 2`] = `
{
  output: "Global mode: enabled
  ┌───────────┬────────────┐
  │ Name      │ Type       │
  ├───────────┼────────────┤
  │ global-db │ postgresql │
  └───────────┴────────────┘
",
  step: "after set-global",
}
`;

snapshot[`sqlr set-global 3`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "after set-global false",
}
`;

snapshot[`sqlr set 1`] = `
{
  output: "Default connection set to repo-db
",
  step: "set output",
}
`;

snapshot[`sqlr set 2`] = `
{
  output: "  ┌─────────┬────────────┬───────────────────────────────────┐
  │ Name    │ Type       │ Connection string                 │
  ├─────────┼────────────┼───────────────────────────────────┤
  │ repo-db │ postgresql │ postgres://u:p@localhost:5432/db1 │
  └─────────┴────────────┴───────────────────────────────────┘
",
  step: "get uses default",
}
`;

snapshot[`sqlr set 3`] = `
{
  output: "  ┌──────────┬───────┬────────────────────────────────┐
  │ Name     │ Type  │ Connection string              │
  ├──────────┼───────┼────────────────────────────────┤
  │ other-db │ mysql │ mysql://u:p@localhost:3306/db2 │
  └──────────┴───────┴────────────────────────────────┘
",
  step: "default in other repo is other-db",
}
`;

snapshot[`sqlr set 4`] = `
{
  output: "  ┌───────────┬────────────┬───────────────────────────────────┐
  │ Name      │ Type       │ Connection string                 │
  ├───────────┼────────────┼───────────────────────────────────┤
  │ global-db │ postgresql │ postgres://u:p@localhost:5432/db1 │
  └───────────┴────────────┴───────────────────────────────────┘
",
  step: "global default used from another repo",
}
`;
